--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,22 @@ theme:
     - navigation.tabs
     - search.suggest
     - search.highlight
+  palette:
+    - scheme: default
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/weather-night
+        name: Switch to dark mode
+    - scheme: slate
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to light mode
+
+extra_css:
+  - styles/extra.css
 
 markdown_extensions:
   - pymdownx.superfences
@@ -37,3 +53,9 @@ nav:
 
 plugins:
   - search
+  - git-revision-date-localized:
+      fallback_to_build_date: true
+      enable_creation_date: true
+      timezone: Asia/Kuala_Lumpur  # Adjust to your region
+      locale: en
+  - git-authors
